--- a/ide/Makefile.fpc
+++ b/ide/Makefile.fpc
@@ -147,11 +147,11 @@ endif
 #-----------------------------------------------------------------------------
 revisioninc:
 ifneq ($(USESVN2REVISIONINC),0)
-ifeq ($(wildcard ../tools/svn2revisioninc$(SRCEXEEXT)),)
-	$(MAKE) -C ../tools svn2revisioninc$(SRCEXEEXT) OS_TARGET=$(OS_SOURCE) CPU_TARGET=$(CPU_SOURCE) OPT=''
-endif
-	../tools/svn2revisioninc$(SRCEXEEXT) .. revision.inc
-endif
+#ifeq ($(wildcard ../tools/svn2revisioninc$(SRCEXEEXT)),)
+#	$(MAKE) -C ../tools svn2revisioninc$(SRCEXEEXT) OS_TARGET=$(OS_SOURCE) CPU_TARGET=$(CPU_SOURCE) OPT=''
+#endif
+#	../tools/svn2revisioninc$(SRCEXEEXT) .. revision.inc
+#endif
 
 #-----------------------------------------------------------------------------
 # compile IDE without extra packages
