AROS, Amiga, MorphOS: unified calls and specials for MorphOS and Amiga

--- a/lcl/interfaces/Makefile.fpc
+++ b/lcl/interfaces/Makefile.fpc
@@ -19,6 +19,9 @@ else
 ifeq ($(OS_TARGET),darwin)
 LCL_PLATFORM=carbon
 else
+ifeq ($(OS_TARGET),aros)
+LCL_PLATFORM=mui
+else
 LCL_PLATFORM=gtk2
 endif
 endif
