--- a/ide/Makefile.fpc
+++ b/ide/Makefile.fpc
@@ -155,7 +155,7 @@ ifneq ($(USESVN2REVISIONINC),0)
 #	$(MAKE) -C ../tools svn2revisioninc$(SRCEXEEXT) OS_TARGET=$(OS_SOURCE) CPU_TARGET=$(CPU_SOURCE) OPT=''
 #endif
 #	../tools/svn2revisioninc$(SRCEXEEXT) .. revision.inc
-#endif
+endif
 
 #-----------------------------------------------------------------------------
 # compile IDE without extra packages
